fixed clipped shadow (not the hedgehog)

--- a/css/index.css
+++ b/css/index.css
@@ -139,7 +139,7 @@
 
     /*Dimensions*/
     width: 300px;
-    height: 250px;
+    height: 280px;
 
     border-radius: 10px;
 
